--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -1,5 +1,4 @@
 {% extends "public.html" %} {% block toolbar_title %} {{ tpos.name }}
-
 <q-btn
   flat
   dense
@@ -8,7 +7,6 @@
   icon="share"
   color="white"
 ></q-btn>
-
 {% endblock %} {% block footer %}{% endblock %} {% block page_container %}
 <q-page-container>
   <q-page>
@@ -22,10 +20,13 @@
       >
       <div class="row justify-center full-width">
         <div class="col-12 col-sm-8 col-md-6 col-lg-4 text-center">
-          <h3 class="q-mb-md">{% raw %}{{ amountFormatted }}{% endraw %}</h3>
-          <h5 class="q-mt-none q-mb-sm">
-            {% raw %}{{ fsat }}{% endraw %} <small>sat</small>
-          </h5>
+          <h3 class="q-mb-md">${ amountFormatted }</h3>
+          <h5 class="q-mt-none q-mb-sm">${ fsat }<small>sat</small></h5>
+          <div v-if="adding">
+            <h5>
+              <i>Total: ${totalFormatted}</i>
+            </h5>
+          </div>
         </div>
       </div>
     </q-page-sticky>
@@ -116,7 +117,7 @@
             >
             <q-btn
               unelevated
-              @click="stack.splice(-1, 1)"
+              @click="stack.pop()"
               size="xl"
               :outline="!($q.dark.isActive)"
               rounded
@@ -134,7 +135,7 @@
             >
             <q-btn
               unelevated
-              @click="stack = []"
+              @click="adding ? cancelAddAmount() : stack = []"
               size="xl"
               :outline="!($q.dark.isActive)"
               rounded
@@ -144,8 +145,8 @@
             >
             <q-btn
               unelevated
-              :disabled="amount == 0"
-              @click="submitForm()"
+              :disabled="adding || amount == 0"
+              @click="addingAmount()"
               size="xl"
               :outline="!($q.dark.isActive)"
               rounded
@@ -156,13 +157,13 @@
             <q-btn
               unelevated
               :disabled="amount == 0"
-              @click="submitForm()"
+              @click="adding ? addAmount() : submitForm()"
               size="xl"
               :outline="!($q.dark.isActive)"
               rounded
               color="positive"
               class="btn-confirm"
-              >OK</q-btn
+              >${ adding ? 'Add' : 'Ok'}</q-btn
             >
           </div>
         </div>
@@ -209,17 +210,14 @@
             class="rounded-borders"
           ></qrcode>
         </q-responsive>
-        <div class="text-center" v-show="!atmMode">
-          <h3 class="q-my-md">
-            {% raw %}{{ amountWithTipFormatted }}{% endraw %}
-          </h3>
+        <div class="text-center">
+          <h3 class="q-my-md">${ amountWithTipFormatted }</h3>
           <h5 class="q-mt-none">
-            {% raw %}{{ fsat }}
+            ${ fsat }
             <small>sat</small>
             <span v-show="tip_options" style="font-size: 0.75rem"
-              >( + {{ tipAmountFormatted }} tip)</span
+              >( + ${ tipAmountFormatted } tip)</span
             >
-            {% endraw %}
           </h5>
           <q-btn
             outline
@@ -234,7 +232,7 @@
             outline
             color="grey"
             @click="copyText(invoiceDialog.data.payment_request)"
-            >Copy</q-btn
+            >Copy invoice</q-btn
           >
           <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
         </div>
@@ -257,7 +255,7 @@
             color="primary"
             v-for="tip in tip_options.filter(f => f != 'Round')"
             :key="tip"
-            >{% raw %}{{ tip }}{% endraw %}%</q-btn
+            >${ tip }%</q-btn
           >
           <q-btn
             style="padding: 10px; margin: 3px"
@@ -346,20 +344,18 @@
             </q-item-section>
           </q-item>
           <q-item v-for="(payment, idx) in lastPaymentsDialog.data" :key="idx">
-            {%raw%}
             <q-item-section>
               <q-item-label class="text-bold"
-                >{{payment.amount / 1000}} sats</q-item-label
+                >${payment.amount / 1000} sats</q-item-label
               >
               <q-item-label caption lines="2"
-                >Hash: {{payment.checking_id.slice(0, 30)}}...</q-item-label
+                >Hash: ${payment.checking_id.slice(0, 30)}...</q-item-label
               >
             </q-item-section>
             <q-item-section side top>
-              <q-item-label caption>{{payment.dateFrom}}</q-item-label>
+              <q-item-label caption>${payment.dateFrom}</q-item-label>
               <q-icon name="check" color="green" />
             </q-item-section>
-            {%endraw%}
           </q-item>
         </q-list>
       </q-card>
@@ -425,6 +421,7 @@
   new Vue({
     el: '#vue',
     mixins: [windowMixin],
+    delimiters: ['${', '}'],
     data: function () {
       return {
         tposId: '{{ tpos.id }}',
@@ -462,17 +459,25 @@
           show: false
         },
         rounding: false,
-        isFullScreen: false
+        isFullScreen: false,
+        adding: false,
+        total: 0.0
       }
     },
     computed: {
       amount: function () {
         if (!this.stack.length) return 0.0
-        return Number(this.stack.join('') / 100)
+        return this.stack.reduce((acc, dig) => acc * 10 + dig, 0) * 0.01
       },
       amountFormatted: function () {
         return LNbits.utils.formatCurrency(
           this.amount.toFixed(2),
+          this.currency
+        )
+      },
+      totalFormatted() {
+        return LNbits.utils.formatCurrency(
+          (this.total + this.amount).toFixed(2),
           this.currency
         )
       },
@@ -522,6 +527,22 @@
       }
     },
     methods: {
+      addingAmount() {
+        this.adding = true
+        this.total = this.amount
+        this.stack = []
+      },
+      addAmount() {
+        this.total = +(this.total + this.amount).toFixed(2)
+        this.stack = Array.from(String(this.total * 100), Number)
+        this.total = 0.0
+        this.adding = false
+      },
+      cancelAddAmount() {
+        this.stack = Array.from(String(this.total * 100), Number)
+        this.total = 0.0
+        this.adding = false
+      },
       atm() {
         if (this.withdrawamtposs > 0) {
           this.atmBox = true
@@ -661,10 +682,19 @@
               dialog.data = response.data
               dialog.show = true
 
-              dialog.dismissMsg = self.$q.notify({
-                timeout: 0,
-                message: 'Waiting for payment...'
-              })
+            dialog.paymentChecker = setInterval(function () {
+              axios
+                .get(
+                  '/tpos/api/v1/tposs/' +
+                    self.tposId +
+                    '/invoices/' +
+                    response.data.payment_hash
+                )
+                .then(function (res) {
+                  if (res.data.paid) {
+                    clearInterval(dialog.paymentChecker)
+                    dialog.dismissMsg()
+                    dialog.show = false
 
               dialog.paymentChecker = setInterval(function () {
                 axios
@@ -819,7 +849,7 @@
               this.isFullScreen = document.fullscreenElement
             })
           })
-          .catch(err => console.debug(err))
+          .catch(err => console.log(err))
       }
     },
     created: function () {
