--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -1,15 +1,25 @@
 {% extends "public.html" %} {% block toolbar_title %} {{ tpos.name }}
-<q-btn flat dense size="md" @click.prevent="urlDialog.show = true" icon="share" color="white"></q-btn>
+<q-btn
+  flat
+  dense
+  size="md"
+  @click.prevent="urlDialog.show = true"
+  icon="share"
+  color="white"
+></q-btn>
 {% endblock %} {% block footer %}{% endblock %} {% block page_container %}
 <q-page-container>
   <q-page>
     <q-page-sticky v-if="exchangeRate" expand position="top">
       <div class="row justify-center full-width">
         <div class="col-12 col-sm-8 col-md-6 col-lg-4 text-center">
-          <h3 class="q-mb-md">{% raw %}{{ amountFormatted }}{% endraw %}</h3>
-          <h5 class="q-mt-none q-mb-sm">
-            {% raw %}{{ fsat }}{% endraw %} <small>sat</small>
-          </h5>
+          <h3 class="q-mb-md">${ amountFormatted }</h3>
+          <h5 class="q-mt-none q-mb-sm">${ fsat }<small>sat</small></h5>
+          <div v-if="adding">
+            <h5>
+              <i>Total: ${totalFormatted}</i>
+            </h5>
+          </div>
         </div>
       </div>
     </q-page-sticky>
@@ -100,7 +110,7 @@
             >
             <q-btn
               unelevated
-              @click="stack.splice(-1, 1)"
+              @click="stack.pop()"
               size="xl"
               :outline="!($q.dark.isActive)"
               rounded
@@ -118,7 +128,7 @@
             >
             <q-btn
               unelevated
-              @click="stack = []"
+              @click="adding ? cancelAddAmount() : stack = []"
               size="xl"
               :outline="!($q.dark.isActive)"
               rounded
@@ -128,8 +138,8 @@
             >
             <q-btn
               unelevated
-              :disabled="amount == 0"
-              @click="submitForm()"
+              :disabled="adding || amount == 0"
+              @click="addingAmount()"
               size="xl"
               :outline="!($q.dark.isActive)"
               rounded
@@ -140,44 +150,74 @@
             <q-btn
               unelevated
               :disabled="amount == 0"
-              @click="submitForm()"
+              @click="adding ? addAmount() : submitForm()"
               size="xl"
               :outline="!($q.dark.isActive)"
               rounded
               color="positive"
               class="btn-confirm"
-              >OK</q-btn
+              >${ adding ? 'Add' : 'Ok'}</q-btn
             >
           </div>
         </div>
       </div>
     </q-page-sticky>
     <q-page-sticky position="top-right" :offset="[18, 18]">
-      <q-btn @click="showLastPayments" fab icon="receipt_long" color="primary" />
+      <q-btn
+        @click="showLastPayments"
+        fab
+        icon="receipt_long"
+        color="primary"
+      />
     </q-page-sticky>
     <q-page-sticky position="top-right" :offset="[18, 90]">
-      <q-btn @click="toggleFullscreen" fab :icon="fullScreenIcon" color="primary" />
+      <q-btn
+        @click="toggleFullscreen"
+        fab
+        :icon="fullScreenIcon"
+        color="primary"
+      />
     </q-page-sticky>
-    <q-dialog v-model="invoiceDialog.show" position="top" @hide="closeInvoiceDialog">
-      <q-card v-if="invoiceDialog.data" class="q-pa-lg q-pt-xl lnbits__dialog-card">
+    <q-dialog
+      v-model="invoiceDialog.show"
+      position="top"
+      @hide="closeInvoiceDialog"
+    >
+      <q-card
+        v-if="invoiceDialog.data"
+        class="q-pa-lg q-pt-xl lnbits__dialog-card"
+      >
         <q-responsive :ratio="1" class="q-mx-xl q-mb-md">
-          <qrcode :value="'lightning:' + invoiceDialog.data.payment_request.toUpperCase()" :options="{width: 800}"
-            class="rounded-borders"></qrcode>
+          <qrcode
+            :value="'lightning:' + invoiceDialog.data.payment_request.toUpperCase()"
+            :options="{width: 800}"
+            class="rounded-borders"
+          ></qrcode>
         </q-responsive>
         <div class="text-center">
-          <h3 class="q-my-md">
-            {% raw %}{{ amountWithTipFormatted }}{% endraw %}
-          </h3>
+          <h3 class="q-my-md">${ amountWithTipFormatted }</h3>
           <h5 class="q-mt-none">
-            {% raw %}{{ fsat }}
+            ${ fsat }
             <small>sat</small>
-            <span v-show="tip_options" style="font-size: 0.75rem">( + {{ tipAmountFormatted }} tip)</span>
-            {% endraw %}
+            <span v-show="tip_options" style="font-size: 0.75rem"
+              >( + ${ tipAmountFormatted } tip)</span
+            >
           </h5>
-          <q-btn outline color="grey" icon="nfc" @click="readNfcTag()" :disable="nfcTagReading"></q-btn>
+          <q-btn
+            outline
+            color="grey"
+            icon="nfc"
+            @click="readNfcTag()"
+            :disable="nfcTagReading"
+          ></q-btn>
         </div>
         <div class="row q-mt-lg">
-          <q-btn outline color="grey" @click="copyText(invoiceDialog.data.payment_request)">Copy invoice</q-btn>
+          <q-btn
+            outline
+            color="grey"
+            @click="copyText(invoiceDialog.data.payment_request)"
+            >Copy invoice</q-btn
+          >
           <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
         </div>
       </q-card>
@@ -189,20 +229,52 @@
           <b style="font-size: 24px">Would you like to leave a tip?</b>
         </div>
         <div class="text-center q-mb-xl">
-          <q-btn style="padding: 10px; margin: 3px" unelevated @click="processTipSelection(tip)" size="lg"
-            :outline="!($q.dark.isActive)" rounded color="primary" v-for="tip in tip_options.filter(f => f != 'Round')"
-            :key="tip">{% raw %}{{ tip }}{% endraw %}%</q-btn>
-          <q-btn style="padding: 10px; margin: 3px" unelevated @click="setRounding" size="lg"
-            :outline="!($q.dark.isActive)" rounded color="primary" label="Round to"></q-btn>
+          <q-btn
+            style="padding: 10px; margin: 3px"
+            unelevated
+            @click="processTipSelection(tip)"
+            size="lg"
+            :outline="!($q.dark.isActive)"
+            rounded
+            color="primary"
+            v-for="tip in tip_options.filter(f => f != 'Round')"
+            :key="tip"
+            >${ tip }%</q-btn
+          >
+          <q-btn
+            style="padding: 10px; margin: 3px"
+            unelevated
+            @click="setRounding"
+            size="lg"
+            :outline="!($q.dark.isActive)"
+            rounded
+            color="primary"
+            label="Round to"
+          ></q-btn>
           <div class="row q-my-lg" v-if="rounding">
-            <q-input class="col" ref="inputRounding" v-model.number="tipRounding" :placeholder="roundToSugestion"
-              type="number" hint="Total amount including tip" :prefix="currency">
+            <q-input
+              class="col"
+              ref="inputRounding"
+              v-model.number="tipRounding"
+              :placeholder="roundToSugestion"
+              type="number"
+              hint="Total amount including tip"
+              :prefix="currency"
+            >
             </q-input>
-            <q-btn class="q-ml-sm" style="margin-bottom: 20px" color="primary" @click="calculatePercent">Ok</q-btn>
+            <q-btn
+              class="q-ml-sm"
+              style="margin-bottom: 20px"
+              color="primary"
+              @click="calculatePercent"
+              >Ok</q-btn
+            >
           </div>
         </div>
         <div class="row q-mt-lg">
-          <q-btn flat color="primary" @click="processTipSelection(0)">No, thanks</q-btn>
+          <q-btn flat color="primary" @click="processTipSelection(0)"
+            >No, thanks</q-btn
+          >
           <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
         </div>
       </q-card>
@@ -211,7 +283,11 @@
     <q-dialog v-model="urlDialog.show" position="top">
       <q-card class="q-pa-lg q-pt-xl lnbits__dialog-card">
         <q-responsive :ratio="1" class="q-mx-xl q-mb-md">
-          <qrcode value="{{ request.url }}" :options="{width: 800}" class="rounded-borders"></qrcode>
+          <qrcode
+            value="{{ request.url }}"
+            :options="{width: 800}"
+            class="rounded-borders"
+          ></qrcode>
         </q-responsive>
         <div class="text-center q-mb-xl">
           <p style="word-break: break-all">
@@ -219,15 +295,24 @@
           </p>
         </div>
         <div class="row q-mt-lg">
-          <q-btn outline color="grey" @click="copyText('{{ request.url }}', 'TPoS URL copied to clipboard!')">Copy
-            URL</q-btn>
+          <q-btn
+            outline
+            color="grey"
+            @click="copyText('{{ request.url }}', 'TPoS URL copied to clipboard!')"
+            >Copy URL</q-btn
+          >
           <q-btn v-close-popup flat color="grey" class="q-ml-auto">Close</q-btn>
         </div>
       </q-card>
     </q-dialog>
 
     <q-dialog v-model="complete.show" position="top">
-      <q-icon name="check" transition-show="fade" class="text-light-green" style="font-size: min(90vw, 40em)"></q-icon>
+      <q-icon
+        name="check"
+        transition-show="fade"
+        class="text-light-green"
+        style="font-size: min(90vw, 40em)"
+      ></q-icon>
     </q-dialog>
 
     <q-dialog v-model="lastPaymentsDialog.show" position="bottom">
@@ -243,16 +328,18 @@
             </q-item-section>
           </q-item>
           <q-item v-for="(payment, idx) in lastPaymentsDialog.data" :key="idx">
-            {%raw%}
             <q-item-section>
-              <q-item-label class="text-bold">{{payment.amount / 1000}} sats</q-item-label>
-              <q-item-label caption lines="2">Hash: {{payment.checking_id.slice(0, 30)}}...</q-item-label>
+              <q-item-label class="text-bold"
+                >${payment.amount / 1000} sats</q-item-label
+              >
+              <q-item-label caption lines="2"
+                >Hash: ${payment.checking_id.slice(0, 30)}...</q-item-label
+              >
             </q-item-section>
             <q-item-section side top>
-              <q-item-label caption>{{payment.dateFrom}}</q-item-label>
+              <q-item-label caption>${payment.dateFrom}</q-item-label>
               <q-icon name="check" color="green" />
             </q-item-section>
-            {%endraw%}
           </q-item>
         </q-list>
       </q-card>
@@ -292,6 +379,7 @@
   new Vue({
     el: '#vue',
     mixins: [windowMixin],
+    delimiters: ['${', '}'],
     data: function () {
       return {
         tposId: '{{ tpos.id }}',
@@ -323,17 +411,25 @@
           show: false
         },
         rounding: false,
-        isFullScreen: false
+        isFullScreen: false,
+        adding: false,
+        total: 0.0
       }
     },
     computed: {
       amount: function () {
         if (!this.stack.length) return 0.0
-        return Number(this.stack.join('') / 100)
+        return this.stack.reduce((acc, dig) => acc * 10 + dig, 0) * 0.01
       },
       amountFormatted: function () {
         return LNbits.utils.formatCurrency(
           this.amount.toFixed(2),
+          this.currency
+        )
+      },
+      totalFormatted() {
+        return LNbits.utils.formatCurrency(
+          (this.total + this.amount).toFixed(2),
           this.currency
         )
       },
@@ -383,6 +479,22 @@
       }
     },
     methods: {
+      addingAmount() {
+        this.adding = true
+        this.total = this.amount
+        this.stack = []
+      },
+      addAmount() {
+        this.total = +(this.total + this.amount).toFixed(2)
+        this.stack = Array.from(String(this.total * 100), Number)
+        this.total = 0.0
+        this.adding = false
+      },
+      cancelAddAmount() {
+        this.stack = Array.from(String(this.total * 100), Number)
+        this.total = 0.0
+        this.adding = false
+      },
       setRounding() {
         this.rounding = true
         this.tipRounding = this.roundToSugestion
@@ -456,9 +568,9 @@
               axios
                 .get(
                   '/tpos/api/v1/tposs/' +
-                  self.tposId +
-                  '/invoices/' +
-                  response.data.payment_hash
+                    self.tposId +
+                    '/invoices/' +
+                    response.data.payment_hash
                 )
                 .then(function (res) {
                   if (res.data.paid) {
@@ -499,7 +611,7 @@
             message: 'Tap your NFC tag to pay this invoice with LNURLw.'
           })
 
-          return ndef.scan({ signal: readerAbortController.signal }).then(() => {
+          return ndef.scan({signal: readerAbortController.signal}).then(() => {
             ndef.onreadingerror = () => {
               self.nfcTagReading = false
 
@@ -511,7 +623,7 @@
               readerAbortController.abort()
             }
 
-            ndef.onreading = ({ message }) => {
+            ndef.onreading = ({message}) => {
               //Decode NDEF data from tag
               const textDecoder = new TextDecoder('utf-8')
 
@@ -548,10 +660,10 @@
         return axios
           .post(
             '/tpos/api/v1/tposs/' +
-            self.tposId +
-            '/invoices/' +
-            self.invoiceDialog.data.payment_request +
-            '/pay',
+              self.tposId +
+              '/invoices/' +
+              self.invoiceDialog.data.payment_request +
+              '/pay',
             {
               lnurl: lnurl
             }
@@ -568,11 +680,12 @@
           })
       },
       getRates() {
-        LNbits.api.request('GET', `/tpos/api/v1/rate/${this.currency}`).then(
-          response => {
+        LNbits.api
+          .request('GET', `/tpos/api/v1/rate/${this.currency}`)
+          .then(response => {
             this.exchangeRate = response.data.rate
-          }
-        ).catch(e => console.error(e))
+          })
+          .catch(e => console.error(e))
       },
       getLastPayments() {
         return axios
@@ -596,14 +709,15 @@
         if (document.fullscreenElement) return document.exitFullscreen()
 
         const elem = document.documentElement
-        elem.requestFullscreen({ navigationUI: "show" })
+        elem
+          .requestFullscreen({navigationUI: 'show'})
           .then(() => {
-            document.addEventListener("fullscreenchange", () => {
+            document.addEventListener('fullscreenchange', () => {
               this.isFullScreen = document.fullscreenElement
             })
           })
           .catch(err => console.log(err))
-      },
+      }
     },
     created: function () {
       var getRates = this.getRates
